# tourism-technology-festival-2025

./: .gitignore  LICENSE  README.md  Sentinel_3.ipynb  Sentinel_3.py  example.json  mise.toml  package-lock.json  pyproject.toml  stac_query_alps_2ops.ipynb
backend/: go.mod  main.go  main_test.go  rows.json
backend/backend/: backend.go  backend_test.go
frontend/: :w  package-lock.json  package.json
frontend/src/: App.tsx  Background.tsx
frontend/src/assets/: Autumn.gih  Summer.gih  Winter.gih
pipeline_colors/: extract.py
presentation/: presentation.pptx
processing/: Sentinel_3.ipynb  Sentinel_3.py
src/: filter.py
src/data analysis/: data_analysis.ipynb  row.json
src/machine learning/: README.md  message.txt  tree_classifier.ipynb
src/machine learning/sentinel_tree_images/: tree_1_ndvi.tif
src/preprocessing/: .gitignore  filter.py
src/search/: README.md  index.html  package-lock.json  package.json
src/search/public/: example.json
src/search/src/: App.tsx  index.css
src/search/src/components/: Asset.tsx  Background.tsx  LoadingSpinner.tsx  PathCanvas.tsx  SearchBar.tsx  SearchResult.tsx
src/search/src/components/ui/: sidebar.tsx
src/search/src/data/: filtered.json  sampleData.json
src/search/src/pages/: Index.tsx  TrailPage.tsx
