[project]
name = "tourism-technology-festival-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "gerry",email = "jakob@geriner-j.eu"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "notebook (>=7.4.7,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "geogif (>=0.3,<0.4)",
    "pystac-client (>=0.9.0,<0.10.0)",
    "stackstac (>=0.5.1,<0.6.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openeo (>=0.46.0,<0.47.0)",
    "netcdf4 (>=1.7.3,<2.0.0)",
    "h5netcdf (>=1.7.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
